developer/17.0/reference/messages/kmc-keyboard-info.keyboardinfocompilermessages.md
---
title: Compiler Messages Reference for @keymanapp/kmc-keyboard-info
---

 Code | Identifier | Message
------|------------|---------
[KM09001](km09001) | `FATAL_UnexpectedException` | This is an internal error; the message will vary
[KM09002](km09002) | `ERROR_FileDoesNotExist` | File &lt;param&gt; does not exist\.
[KM09005](km09005) | `ERROR_InvalidAuthorEmail` | Invalid author email: &lt;param&gt;
[KM09006](km09006) | `ERROR_LicenseFileIsMissing` | License file &lt;param&gt; does not exist\.
[KM09007](km09007) | `ERROR_LicenseFileIsDamaged` | License file &lt;param&gt; could not be loaded or decoded\.
[KM09008](km09008) | `ERROR_LicenseIsNotValid` | An error was encountered parsing license file &lt;param&gt;: &lt;param&gt;\.
[KM09009](km09009) | `ERROR_CannotBuildWithoutKmpFile` | Compiling the \.keyboard\_info file requires a \.kmp file for metadata\.
[KM0900A](km0900a) | `ERROR_NoLicenseFound` | No license for the keyboard was found\. MIT license is required for publication to Keyman keyboards repository\.
[KM0900E](km0900e) | `ERROR_FontFileCannotBeRead` | Font &lt;param&gt; could not be parsed to extract a font family\.
[KM0900F](km0900f) | `ERROR_FontFileMetaDataIsInvalid` | Font &lt;param&gt; meta data invalid: &lt;param&gt;\.
